--- a/BallClub/BallClub/Storyboards/Game.storyboard
+++ b/BallClub/BallClub/Storyboards/Game.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pbT-sM-LxJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pbT-sM-LxJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
@@ -644,6 +644,10 @@
                         <outlet property="gameTitle" destination="UBW-MU-dRO" id="W0y-lK-ShX"/>
                         <outlet property="goingButton" destination="4U3-SR-G5w" id="4It-pb-Dyc"/>
                         <outlet property="goingIcon" destination="c3y-K9-yZV" id="gA0-K9-UnO"/>
+                        <outlet property="goingPlayerImage" destination="aMe-nd-gnM" id="wzv-yH-I7D"/>
+                        <outlet property="goingPlayersLabel" destination="MJl-1v-7IV" id="v2d-vh-NaP"/>
+                        <outlet property="invitedPlayersImage" destination="FTx-SW-2IF" id="Ote-Ct-cpJ"/>
+                        <outlet property="invitedPlayersLabel" destination="AmS-pg-rgr" id="b5m-8i-Eab"/>
                         <outlet property="locationImage" destination="lY5-WE-HZ9" id="Fnl-eY-3Fi"/>
                         <outlet property="notGoingButton" destination="6hk-XN-nvx" id="cVC-4y-v6h"/>
                         <outlet property="notGoingIcon" destination="0RC-cc-B1t" id="JvH-m7-bZ5"/>
